# text-generation-webui-api-rs

./: Cargo.toml  LICENSE  README.md
examples/cli/: cli.rs  main.rs
examples/cli/cli/: chat.rs  common.rs  model.rs
src/: api.rs  character.rs  cli.rs  error.rs  history.rs  lib.rs  main.rs
src/api/: chat.rs  model.rs
src/cli/: chat.rs
