[package]
name = "text-generation-webui-chat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
required-features = ["cli"]
path = "src/main.rs"

[features]
default = []
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"], optional = true}
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
