[package]
name = "text-generation-webui-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"]}
